--- a/src/World.html
+++ b/src/World.html
@@ -13,6 +13,7 @@
 
     <p id="numdot">XXX</p>
 
+
     <p id="timer">Time: 0.00</p>
     <p id="winText"></p>
     <p><button id="resetBtn">Reset Game</button></p>
@@ -20,6 +21,11 @@
     <p>
       <button id="normalOn">Normals On</button>
       <button id="normalOff">Normals Off</button>
+    </p>
+
+    <p>
+      <label for="lightColor">Point Light Color:</label>
+      <input type="color" id="lightColor" value="#ffffff">
     </p>
 
     <p>
