--- a/src/World.html
+++ b/src/World.html
@@ -59,6 +59,8 @@
         <p>Name: Arnav Kartikeya</p>
         <p>Email: akartike@ucsc.edu</p>
         <p>Assignment: Lab 04</p>
+        <p>The orange cube is the visual indicator of the spotlight, the yellow cube is the visual indicator of the point light</p>
+        <p>Look up to find the point light and the spotlight, or use the sliders to change the position</p>
         <p>3d world with a randomly generated forest</p>
         <p>The light animation will have the yellow light source rotate in a circular configuration</p>
         <p>Specular, diffuse, and ambient lighting are implemented</p>
