--- a/src/World.html
+++ b/src/World.html
@@ -18,6 +18,8 @@
     <p id="winText"></p>
     <p><button id="resetBtn">Reset Game</button></p>
 
+     <p>LIGHTING IS OFF BY DEFAULT, TURN LIGHTING ON WITH BUTTONS BELOW</p>
+
     <p>
       <button id="normalOn">Normals On</button>
       <button id="normalOff">Normals Off</button>
